[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/images/status_bar_honey.png" type="Texture" id=1]
[ext_resource path="res://ui/images/status_bar_border.png" type="Texture" id=2]
[ext_resource path="res://ui/images/status_bar_bg.png" type="Texture" id=3]
[ext_resource path="res://ui/images/honey_crop.PNG" type="Texture" id=4]
[ext_resource path="res://ui/images/pollen_crop.PNG" type="Texture" id=5]
[ext_resource path="res://ui/images/status_bar_pollen.png" type="Texture" id=6]
[ext_resource path="res://ui/gui.gd" type="Script" id=7]
[ext_resource path="res://entities/bee/bee_1_crop.PNG" type="Texture" id=8]
[ext_resource path="res://ui/Ubuntu-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 9 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 144.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1180.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="VBoxContainer" parent="TopBar"]
margin_right = 1063.0
margin_bottom = 114.0
size_flags_horizontal = 3

[node name="HoneyBar" type="HBoxContainer" parent="TopBar/Bars"]
margin_right = 1063.0
margin_bottom = 50.0

[node name="MarginContainer" type="MarginContainer" parent="TopBar/Bars/HoneyBar"]
margin_right = 50.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="TopBar/Bars/HoneyBar/MarginContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="TextureProgress" type="TextureProgress" parent="TopBar/Bars/HoneyBar"]
margin_left = 54.0
margin_right = 454.0
margin_bottom = 50.0
size_flags_horizontal = 8
size_flags_vertical = 8
max_value = 10.0
step = 0.01
value = 10.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PollenBar" type="HBoxContainer" parent="TopBar/Bars"]
margin_top = 54.0
margin_right = 1063.0
margin_bottom = 104.0

[node name="MarginContainer" type="MarginContainer" parent="TopBar/Bars/PollenBar"]
margin_right = 50.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="TopBar/Bars/PollenBar/MarginContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="TextureProgress" type="TextureProgress" parent="TopBar/Bars/PollenBar"]
margin_left = 54.0
margin_right = 454.0
margin_bottom = 50.0
max_value = 10.0
step = 0.01
texture_under = ExtResource( 3 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counters" type="VBoxContainer" parent="TopBar"]
margin_left = 1067.0
margin_right = 1160.0
margin_bottom = 114.0

[node name="BeeCount" type="HBoxContainer" parent="TopBar/Counters"]
margin_right = 93.0
margin_bottom = 55.0

[node name="TextureRect" type="TextureRect" parent="TopBar/Counters/BeeCount"]
margin_right = 50.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="TopBar/Counters/BeeCount"]
margin_left = 54.0
margin_right = 81.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TimeLabel" type="Label" parent="TopBar/Counters"]
margin_top = 59.0
margin_right = 93.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "0:00"
